--- a/src/app/sistema/vendas/pedidos-vendas/listar-pedidos-vendas/listar-pedidos-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/listar-pedidos-vendas/listar-pedidos-vendas.component.html
@@ -76,7 +76,7 @@
           <p>{{ pedido.id }}</p>
         </div>
         <div class="col-1">
-          <p>{{ pedido.data }}</p>
+          <p>{{ pedido.data.substring(10, 0) }}</p>
         </div>
         <div class="col-1">
           <p>{{ pedido.loja }}</p>
