--- a/src/app/sistema/expedicao/expedicao.component.html
+++ b/src/app/sistema/expedicao/expedicao.component.html
@@ -15,6 +15,10 @@
         </a>
       </div>
 
+      <div class="col-12 text-center">
+        <h1 class="text-custom-dark text-truncate">Expedição</h1>
+      </div>
+
       <!-- Adicionar ordem de expedição-->
       <div class="row mt-4 m-0 p-0">
 
@@ -75,13 +79,16 @@
         </div>
       </div>   
       <div class="col-12 row mt-3 d-flex justify-content-around">
-        <div class="col-4 row m-auto">
-          <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-sm border-0" (click)="anterior()">
+        <div class="col-3 row m-auto">
+          <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-sm border-0" (click)="anterior()" [class.noActiveButton]="this.atualPageNumber == 0">
             <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Anterior</h5>
           </button>
         </div>
-        <div class="col-4 row m-auto">
-          <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-s border-0" (click)="proximo()">
+        <div class="col-1 d-flex justify-content-end">
+          <p class="h3 fw-normal text-custom-dark">{{atualPageNumber + 1}}/{{pagesNumber}}</p>
+        </div>
+        <div class="col-3 row m-auto">
+          <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-s border-0" (click)="proximo()" [class.noActiveButton]="this.atualPageNumber == (pagesNumber - 1)">
             <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Proximo</h5>
           </button>
         </div>
