--- a/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
@@ -8,7 +8,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content rounded-15 bg-custom-light">
       <div class="modal-header px-4">
-        <h5 class="modal-title text-custom-dark" id="addFilialLabel">Adicionar Filial</h5>
+        <h5 class="modal-title text-custom-dark" id="addFilialLabel">Adicionar Cargo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form [formGroup]="cargoForm" (ngSubmit)="addCargo(cargoForm)">
