fazendo a parte de expedicao

--- a/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
+++ b/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
@@ -1,3 +1,21 @@
+@import "../../../../_variables.scss";
+
+.nav-link.active {
+  background: transparent;
+  font-weight: normal;
+  &:hover {
+    background-color: transparent;
+  }
+}
+
+.nav-link {
+  background-color: $custom-dark;
+  color: $custom-light;
+  &:hover {
+    background-color: #464646;
+  }
+}
+
 .header_table {
     background-color: hsl(357, 85%, 51%);;
     color: #fff;
@@ -6,3 +24,24 @@
   .body_table {
     background-color: #fdfbfb;
   }
+
+  button.submit-buton{
+    background: transparent;
+    color: #000;
+}
+button.submit-buton:hover:hover{
+    background: transparent;
+}
+
+.header_table {
+    background-color: hsl(357, 85%, 51%);;
+    color: #fff;
+  }
+  
+  .body_table {
+    background-color: #fdfbfb;
+  }
+
+.label{
+  width: 12%;
+}
