--- a/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.html
+++ b/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.html
@@ -1,5 +1,134 @@
 <app-navbar></app-navbar>
-<app-criar-embarque></app-criar-embarque>
+
+
+<!-- Modal -->
+<!-- Criar embarque -->
+<div class="modal fade" id="criarEmbarque">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content rounded-15 bg-custom-light">
+      <div class="modal-header px-4">
+        <h5 class="modal-title text-custom-dark" id="addFilialLabel">Criar Embarque</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form [formGroup]="emabrqueForm" (ngSubmit)="addEmbarque(emabrqueForm)">
+        <div class="row">
+          <div class="row m-2 py-2">
+            <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+              <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="numero">
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
+            </div>
+            <div class="col-1 px-2 pt-4 m-0 text-center d-flex align-items-center">
+              <button type="button" cursor="pointer" class="submit-buton h-100 w-100 border border-0 bg-trasnparente" (click)="findThis(emabrqueForm.value)">
+                <i class="submit-buton button-modal bi bi-plus-circle-fill icon-view my-auto fs-3 d-flex align-items-center justify-content-center h-100 w-100 p-0 m-0 fw-bold color-dark"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex m-2 py-2">
+          <div class="label mt-2 mb-2 px-3 pt-4">
+            <label for="sign" class=" label py-2 text-center lead rounded-15 h-100 w-100 m-0 bg-secondary text-white">Carro</label>
+          </div>
+          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+            <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="sign" id="sign">
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Placa</label>
+          </div>
+        </div>
+        <div class="row m-2 py-2">
+          <div class="label mt-2 mb-2 px-3 pt-4">
+            <label for="driver" class=" label py-2 text-center lead rounded-15 h-100 w-100 m-0 bg-secondary text-white">Motorista</label>
+          </div>
+          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+            <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="driver" id="driver">
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome</label>
+          </div>
+        </div>
+        <div class="row m-2 py-2">
+          <table class="col-12 mt-4">
+            <thead class="header_table col-12">
+              <tr>
+                <td class="lead text-center fw-bold">Nº Pedido</td>
+                <td class="lead text-center fw-bold">Cliente</td>
+                <td class="lead text-center fw-bold">Vendedor</td>
+                <td class="lead text-center fw-bold">Data Entrega</td>
+                <td class="lead text-center fw-bold">Status</td>
+                <td class="lead text-center fw-bold"> <td>
+                <td class="lead text-center fw-bold"> </td>
+              </tr>
+            </thead>
+            <tbody class="body_table">
+              <tr class="mt-2" *ngFor="let solicitacao of embarqueSol">
+                <td class="col lead rounded-start text-center fw-bold">{{solicitacao.numero}}</td>
+                <td class="col lead rounded-start text-center fw-bold">{{solicitacao.cliente}}</td>
+                <td class="col lead rounded-start text-center fw-bold">{{solicitacao.vendedor}}</td>
+                <td class="col lead rounded-start text-center fw-bold">{{solicitacao.data | date}}</td>
+                <td class="col lead rounded-start text-center fw-bold">{{solicitacao.status}}</td>
+                <td class="col-1 lead rounded-start text-center fw-bold">
+                  <button class="w-100 h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+                    <h5 class="fw-normal my-auto text-truncate text-custom-dark">Exibir</h5>
+                  </button>
+                </td>
+                <td class="col-1 lead rounded-start text-center fw-bold"><i (click)="delete(solicitacao)" cursor="pointer" class="fs-5 bi-trash-fill icon-delete p-3"></i></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="row m-3 d-flex justify-content-end">
+          <div class="col-3 px-2 p-0 m-0 d-grid">
+            <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Finalizar Embarque</h5>
+            </button>
+          </div>
+        </div>
+      </form>
+      
+      <div class="row m-0 py-3 modal-footer">
+      </div>
+      <!-- /Modal footer -->
+
+    </div>
+    <!-- /Modal content -->
+
+  </div>
+</div>
+
+
+
+<!-- Modal -->
+<!-- Vizualizar Pedidos -->
+<div class="modal fade" id="pedidosEmbarque">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content rounded-15 bg-custom-light">
+      <div class="modal-header px-4">
+        <h5 class="modal-title text-custom-dark" id="addFilialLabel">Pedidos no embarque</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      
+        <div class="row">
+          <div class="row m-2 py-2">
+            <div class="row justify-content-start">
+              <p *ngFor="let pedido of embarquePedidos">Nº: {{ pedido.numero }} Cliente: {{ pedido.cliente }} Vendedor: {{ pedido.vendedor }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="row m-3 d-flex justify-content-end">
+          <div class="col-3 px-2 p-0 m-0 d-grid">
+            <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Finalizar Embarque</h5>
+            </button>
+          </div>
+        </div>
+      
+      <div class="row m-0 py-3 modal-footer">
+      </div>
+      <!-- /Modal footer -->
+
+    </div>
+    <!-- /Modal content -->
+
+  </div>
+</div>
+
+
 
 <!-- Modal -->
 <div class="modal fade" id="filtrarPedido" tabindex="-1" aria-labelledby="filtrarPedidoLabel"
@@ -54,7 +183,7 @@
                     <td class="lead rounded-start text-center fw-bold">{{solicitacao.status}}</td>
                   </tr>
               </tbody>
-          </table>
+            </table>
           </div>
         </div>
       </div>
@@ -89,46 +218,93 @@
         </div>
       </div>
 
-      
-      <div class="row mt-4">
-        <div class="col-6 px-2 p-0 m-0 position-relative">
-          <input type="text" placeholder="Pesquisar" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" (keyup)="filtrar($event)">
-          <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
+      <div class="row m-0 my-4">
+        <div class="col-12">
+          <ul class="nav nav-tabs fs-5 fw-lighter">
+            <li class="nav-item px-1">
+              <a class="nav-link px-4" [class.active]="estoqueSection == 'pedidos'" (click)="toggleEstoqueSection('pedidos')">Pedidos</a>
+            </li>
+            <li class="nav-item px-1">
+              <a class="nav-link px-4" [class.active]="estoqueSection == 'embarque'" (click)="toggleEstoqueSection('embarque')">Embarque</a>
+            </li>
+          </ul>
         </div>
-        <div class="col d-flex justify-content-end">
-          <i cursor="pointer" class="fs-5 bi-funnel icon-filter px-4 py-3 bg-white shadow-sm rounded-5" data-bs-toggle="modal" data-bs-target="#filtrarPedido">
-          </i>
+      </div>
+
+      <div *ngIf="estoqueSection == 'pedidos'">
+        <div class="row mt-4">
+          <div class="col-6 px-2 p-0 m-0 position-relative">
+            <input type="text" placeholder="Pesquisar" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" (keyup)="filtrar($event)">
+            <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
+          </div>
+          <div class="col d-flex justify-content-end">
+            <i cursor="pointer" class="fs-5 bi-funnel icon-filter px-4 py-3 bg-white shadow-sm rounded-5" data-bs-toggle="modal" data-bs-target="#filtrarPedido">
+            </i>
+          </div>
+        </div>
+        <div class="row mt-4 mb-4">
+          <table class="col-12 mt-4">
+            <thead class="header_table col-12">
+                <tr>
+                  <td class="lead text-center fw-bold">Nº Pedido</td>
+                  <td class="lead text-center fw-bold">Cliente</td>
+                  <td class="lead text-center fw-bold">Vendedor</td>
+                  <td class="lead text-center fw-bold">Data Entrega</td>
+                  <td class="lead text-center fw-bold">Status</td>
+                </tr>
+            </thead>
+            <tbody class="body_table">
+                <tr class="mt-2" *ngFor="let solicitacao of solicitacoes">
+                  <td class="lead rounded-start text-center fw-bold">{{solicitacao.numero}}</td>
+                  <td class="lead rounded-start text-center fw-bold">{{solicitacao.cliente}}</td>
+                  <td class="lead rounded-start text-center fw-bold">{{solicitacao.vendedor}}</td>
+                  <td class="lead rounded-start text-center fw-bold">{{solicitacao.data | date}}</td>
+                  <td class="lead rounded-start text-center fw-bold">{{solicitacao.status}}</td>
+                </tr>
+            </tbody>
+          </table>
         </div>
       </div>
-      <div class="row mt-4 mb-4">
-        <table class="col-12 mt-4">
-          <thead class="header_table col-12">
-              <tr>
-                <td class="lead text-center fw-bold">Nº Pedido</td>
-                <td class="lead text-center fw-bold">Cliente</td>
-                <td class="lead text-center fw-bold">Vendedor</td>
-                <td class="lead text-center fw-bold">Data Entrega</td>
-                <td class="lead text-center fw-bold">Status</td>
-              </tr>
-          </thead>
-          <tbody class="body_table">
-              <tr class="mt-2" *ngFor="let solicitacao of solicitacoes">
-                <td class="lead rounded-start text-center fw-bold">{{solicitacao.numero}}</td>
-                <td class="lead rounded-start text-center fw-bold">{{solicitacao.cliente}}</td>
-                <td class="lead rounded-start text-center fw-bold">{{solicitacao.vendedor}}</td>
-                <td class="lead rounded-start text-center fw-bold">{{solicitacao.data | date}}</td>
-                <td class="lead rounded-start text-center fw-bold">{{solicitacao.status}}</td>
-              </tr>
-          </tbody>
-      </table>
-      </div>
-      <div class="col-4 d-grid px-2 p-0 m-0">
-        <button type="button"
-          class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm"
-          data-bs-toggle="modal" data-bs-target="#criarEmbarque" data-backdrop="static" data-keyboard="false">
-          <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Criar Embarque</h5>
-        </button>
-      </div>
+
+      <div *ngIf="estoqueSection == 'embarque'">
+        <div class="row col-12 justify-content-end d-grid px-2 p-0 m-0">
+          <button type="button"
+            class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm"
+            data-bs-toggle="modal" data-bs-target="#criarEmbarque" data-backdrop="static" data-keyboard="false">
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Criar Embarque</h5>
+          </button>
+        </div>
+        <div class="row">
+          <table class="col-12 mt-4">
+            <thead class="header_table col-12">
+                <tr>
+                  <td class="lead text-center fw-bold">Placa</td>
+                  <td class="lead text-center fw-bold">Motorista</td>
+                  <td class="lead text-center fw-bold">Pedidos</td>
+                  <td class="lead text-center fw-bold"> </td>
+                  <td class="lead text-center fw-bold"> </td>
+                </tr>
+            </thead>
+            <tbody class="body_table">
+                <tr class="mt-2" *ngFor="let embarque of embarques">
+                  <td class="lead rounded-start text-center fw-bold">{{embarque.sign}}</td>
+                  <td class="lead rounded-start text-center fw-bold">{{embarque.driver}}</td>
+                  <td class="lead rounded-start text-center fw-bold row text-truncate justify-content-center">
+                    <button class="w-50 h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center shadow-sm" data-bs-toggle="modal" data-bs-target="#pedidosEmbarque" (click)="findPedidos(embarque.id)">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Vizualizar</h5>
+                    </button>
+                  </td>
+                  <td class="col-1 lead rounded-start text-center fw-bold">
+                    <button class="w-100 h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center shadow-sm">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Exibir</h5>
+                    </button>
+                  </td>
+                  <td class="col-1 lead rounded-start text-center fw-bold"><i (click)="deleteEmbarque(embarque.id)" cursor="pointer" class="fs-5 bi-trash-fill icon-delete p-3"></i></td>
+                </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>   
     </div>
     <!-- /Página -->
   </div>
