--- a/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
+++ b/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
@@ -60,8 +60,8 @@
                   </select>
                   <label class="ms-2 small text-truncate text-custom-dark">Tipo de falta</label>
               </div>
-              <div class="row m-0 mt-5 text-custom-dark justify-content-center">
-                <div class="col m-1 row form-floating">
+              <div class="row m-0 mt-5 text-custom-dark d-flex justify-content-start">
+                <div class="col mr-1 row form-floating">
                   <select formControlName="periodo"
                     class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                     placeholder="Necessidade especial">
@@ -69,36 +69,22 @@
                     <option value="horas">Horas</option>
                     <option value="dias">Dias</option>
                   </select>
-                  <label class="ms-2 small text-truncate text-custom-dark">Tipo de falta</label>
+                  <label class="ms-2 small text-truncate text-custom-dark">Período de falta</label>
                 </div>
                 <div class="col m-1 row form-floating">
                   <input formControlName="tempo" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="number" placeholder="Colaborador" >
                   <label class="ms-2 small text-truncate text-custom-dark">Tempo de falta</label>
                 </div>
 
-              </div>
-
-              <div class="row m-0 mt-3 text-custom-dark justify-content-center">
                 <div class="col m-1 form-floating row">
                   <input formControlName="diasAtestado" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="number" placeholder="Colaborador" >
                   <label class="ms-2 small text-truncate text-custom-dark">Dias de atestado</label>
-                </div>
-                <div class="col m-1 form-floating row">
-                  <select formControlName="atestado"
-                    class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                    placeholder="Necessidade especial">
-                    <option value="" disabled selected>Tipo de atestado</option>
-                    <option value="Justificado"> Justificado</option>
-                    <option value="Não justificado">Não justificado</option>
-                  </select>
-                  <label class="ms-2 small text-truncate text-custom-dark">Tipo de atestado</label>
                 </div>
                 <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
                   <button type="submit" class="submit-buton h-100 w-100 border border-0 bg-trasnparent" cursor="pointer">
                     <i class="submit-buton button-modal bi bi-check-circle-fill icon-view my-auto fs-3 h-100 w-100 p-2 m-0 fw-bold"></i>
                   </button>
                 </div>
-
               </div>
 
 
