--- a/src/app/sistema/rh/ausencia/ausencia.component.html
+++ b/src/app/sistema/rh/ausencia/ausencia.component.html
@@ -49,16 +49,13 @@
                 </div>
               </div>
               <!-- Tabela -->
-              <div class="row m-0 mt-3 text-custom-dark justify-content-center" >
-                <div class="col-6 row">
-                  <label class="col-1 px-0 m-0 text-center d-flex align-items-center" for="add-falta">
-                    <i class="bi bi-calendar icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer"></i>
-                  </label>
-                  <div class="col-11 px-2 p-0 m-0 position-relative">
+              <div class="row m-0 mt-3 text-custom-dark d-flex justify-content-start" >
+                <div class="col m-1 row">
+                  <div class="px-2 p-0 m-0 position-relative">
                     <input formControlName="data" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" id="add-falta" name="add-falta">
                   </div>
                 </div>
-                <div class="col-6 row">
+                <div class="col row">
                   <div class="col-11 px-2 p-0 m-0 form-floating">
                     <select formControlName="tipo"
                     class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
@@ -71,24 +68,24 @@
                   </select>
                   <label class="ms-2 small text-truncate text-custom-dark">Tipo de Ausência</label>
                 </div>
-                <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
-                  <button type="submit" class="submit-buton h-100 w-100 border border-0 bg-trasnparent" cursor="pointer">
-                    <i class="submit-buton button-modal bi bi-check-circle-fill icon-view my-auto fs-3 h-100 w-100 p-2 m-0 fw-bold text-green"></i>
-                  </button>
-                </div>
               </div>
-              <div class="row m-0 my-5 text-custom-dark justify-content-center">
-                <div class="col-6">
-                  <div class="px-2 p-0 m-0 form-floating">
+              <div class="row m-0 my-5 text-custom-dark d-flex justify-content-start">
+                <div class="col">
+                  <div class="px-2 form-floating">
                     <input formControlName="de" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Colaborador">
                     <label class="ms-2 small text-truncate text-custom-dark">De:</label>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class="col-12 px-2 p-0 m-0 form-floating">
+                <div class="col">
+                  <div class="px-2 p-0 m-0 form-floating">
                     <input formControlName="ate" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Colaborador">
                     <label class="ms-2 small text-truncate text-custom-dark">Até:</label>
                   </div>
+                </div>
+                <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
+                  <button type="submit" class="submit-buton h-100 w-100 border border-0 bg-trasnparent" cursor="pointer">
+                    <i class="submit-buton button-modal bi bi-check-circle-fill icon-view my-auto fs-3 h-100 w-100 p-2 m-0 fw-bold text-green"></i>
+                  </button>
                 </div>
               </div>
             </div>
