--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -1,6 +1,55 @@
 <app-navbar></app-navbar>
 
+<!-- Modal -->
+<!-- Adicionar turn -->
+<div class="modal fade" id="addTurno" tabindex="-1" aria-labelledby="addTurnoLabel"
+  aria-hidden="true" aria-label="Close">
+  <div class="modal-dialog modal-xl">
+      <!-- Modal content -->
+      <div class="modal-content rounded-15 bg-custom-light">
 
+        <div class="modal-content rounded-15 bg-custom-light">
+          <div class="modal-header px-4">
+            <h5 class="modal-title text-custom-dark" id="addFilialLabel">Adicionar Turno</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form [formGroup]="turnoForm" (ngSubmit)="addTurno(turnoForm)">
+            <div class="col-12 d-flex m-2 justify-content-center">
+                <div class="col-4 px-4 pt-0 p-0 m-0 form-floating">
+                    <input formControlName="nome"
+                      class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+                      placeholder="Turno">
+                  </div>
+                <button type="submit"
+                      class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm" data-bs-dismiss="modal" aria-label="Close">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+                </button>
+            </div>
+          </form>
+          <div class="col-12" *ngFor="let turno of selectTurno">
+            <div class="col-12 d-felx justify-content-center row text-center m-0 p-0">
+              <div class="list-item col-6">
+                <p class="h2 fw-normal text-truncate">{{turno.nome}}</p>
+              </div>
+              <div class="col-1">
+                <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="deleteTurno(turno.id)"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row m-0 py-3 modal-footer">
+          </div>
+          <!-- /Modal footer -->
+    
+        </div>
+
+      </div>
+      <!-- /Modal content -->
+
+  </div>
+</div>
+
+
+<!-- Adicionar cargo -->
 <!-- Modal -->
 <div class="modal fade" id="addCargo" tabindex="-1" aria-labelledby="addCargoLabel"
   aria-hidden="true" aria-label="Close">
@@ -372,7 +421,7 @@
         <div *ngIf="estoqueSection == 'setor'">
           <!-- Departamento -->
           <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
-            <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
+            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <select formControlName="department"
                 class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                 placeholder="Departamento">
@@ -408,15 +457,20 @@
             </div>
 
             <!-- Turno -->
-            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                <input formControlName="shift" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
-                type="text" placeholder="Turno">
-                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Turno</label>
+            <div class="col-4 px-2 pt-4 p-0 m-0 d-flex form-floating">
+              <select formControlName="shift"
+              class="col form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+              placeholder="Cargo">
+                <option value="" disabled selected>Turno</option>
+                <option *ngFor="let turno of selectTurno" value="{{turno.nome}}">{{turno.nome}}</option>
+              </select>
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Turno</label>
+              <i class="button-modal d-flex align-items-center bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" data-bs-toggle="modal" data-bs-target="#addTurno"></i>
             </div>
 
             <!-- Data de admissão -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                <input formControlName="admission"
+                <input formControlName="admission" (blur)="getExpDate(rhForm.value.admission)"
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
                 [max]="getDate()" placeholder="Data de admissão">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de admissão</label>
@@ -447,17 +501,17 @@
             </div>
 
             <!-- Adicionar loja -->
-            <div class="col-4 px-0 pt-4 p-2 m-0 form-floating d-flex">
+            <div class="col-4 row px-2 pt-4 p-0 m-0 d-flex form-floating">
                 <select formControlName="filial"
-                class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                class="col form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
                 placeholder="Necessidade especial">
                 <option value="" disabled selected>Filial</option>
                 <option *ngFor="let umaFilial of filiais" value="{{ umaFilial.nome }}">{{ umaFilial.nome }}</option>
                 </select>
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Filial</label>
-                <div class="col-1 px-0 m-0 text-center d-flex align-items-center">
-                <i class="button-modal bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" (click)="openModal=true"></i>
-                </div>
+                
+                <i class="col-1 button-modal bi-plus-square-fill icon-view my-1 fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer" (click)="openModal=true"></i>
+                
             </div>
           </div>
         </div>
@@ -503,16 +557,16 @@
             <!-- Salário -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <input formControlName="paycheck"
-                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
-                placeholder="Salário" (change)="duplaFuncao(rhForm.value)">
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" currencyMask [value]="salario | currency: 'BRL'"  type="text"
+                placeholder="Salário">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Salário</label>
             </div>
 
             <!-- Dupla Função -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                <input formControlName="duplaFuncao"
-                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
-                placeholder="Dupla Função" readonly>
+                <input formControlName="duplaFuncao" currencyMask [value]="dupla | currency: 'BRL'" 
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Dupla Função">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Dupla Função</label>
             </div>
 
@@ -799,31 +853,45 @@
         </div>
         <div *ngIf="estoqueSection == 'anexos'">
           <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
-              <div class="col-12 d-flex justify-content-center">
+              <div class="col-12">
                 <div class="row m-0 mt-2">
 
-                  <div class="col-12 px-2 pt-4 p-0 m-0 form-floating d-flex flex-column justify-content-between">
-                    <a *ngFor="let anex of anexes" [href]="anexesRepo + anex.fileName" target="_blank"
-                      class="my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning h-100 d-flex justify-content-between shadow-sm w-100">
-                      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Anexo: {{ anex.date | date}} Download</h5>
-                      <div class="d-flex">
-                        <i (click)="deleteAnex($event, anex)" class="bi-trash-fill my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
-                        <i class="bi-cloud-download-fill px-4 my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
-                      </div>
-                    </a>
-                    <button
-                      class="my-3 btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm w-100"
-                      type="button" (click)="newFile.click()">
-                      <input type="file" (change)="addFile($event)" #newFile style="display: none;">
-                      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar Arquivo</h5>
-                      <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
-                    </button>
+                  <div class="col-12 px-2 pt-4 p-0 m-0 form-floating d-flex flex-column justify-content-between align-items-end">
+                    <div class="row col-12 justify-content-start" *ngFor="let anex of anexes">
+                      <a [href]="anexesRepo + anex.fileName" target="_blank"
+                        class="my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning d-flex justify-content-between shadow-sm col-4">
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">{{ anex.originalName }}</h5>
+                        <div class="d-flex">
+                          <i (click)="deleteAnex($event, anex)" class="bi-trash-fill my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                          <i class="bi-cloud-download-fill px-4 my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="row w-100 justify-content-end">
+                      <button
+                        class="col-4 my-3 btn rounded-15 py-3 px-4 bg-custom-success d-flex justify-content-between shadow-sm"
+                        type="button" (click)="newFile.click()">
+                        <input type="file" (change)="addFile($event)" #newFile style="display: none;">
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar Arquivo</h5>
+                        <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                      </button>
+                    </div>
                   </div>
 
                 </div>
 
               </div>
           </div>
+
+
+                    <!-- <button
+                      class="my-3 btn rounded-15 py-3 px-4 bg-custom-success d-flex justify-content-between shadow-sm w-100"
+                      type="button" (click)="newFile.click()">
+                      <input type="file" (change)="addFile($event)" #newFile style="display: none;">
+                      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar Arquivo</h5>
+                      <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
+                    </button> -->
+
       </div>
         <div class="row m-0 mt-4 justify-content-end">
 
