--- a/src/app/sistema/expedicao/cadastro/cadastro-motorista/cadastro-motorista.component.html
+++ b/src/app/sistema/expedicao/cadastro/cadastro-motorista/cadastro-motorista.component.html
@@ -20,9 +20,9 @@
         </div>
   
         <!-- Cards -->
-        <div class="row justify-content-end">
-            <div class="col-3 px-2 p-0 m-0 d-grid">
-                <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+        <div class="container row justify-content-end">
+            <div class="col-2 mx-5">
+                <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm" routerLink="/sistema/expedicao/cadastro/motorista/cadastrar">
                   <h5 class="fw-normal my-auto text-truncate text-custom-dark">Adicionar motorista</h5>
                   <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
                 </button>
