--- a/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
+++ b/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
@@ -45,3 +45,15 @@ button.submit-buton:hover:hover{
 .label{
   width: 12%;
 }
+
+div.modalEbarque{
+  z-index: 1042 !important;
+}
+
+.pedidoLabel{
+  background: hsl(357, 85%, 51%);
+}
+
+.tabela-row{
+  min-height: 350px;
+}
