--- a/src/app/sistema/expedicao/cadastro/cadastro-veiculo/cadastro-veiculo.component.html
+++ b/src/app/sistema/expedicao/cadastro/cadastro-veiculo/cadastro-veiculo.component.html
@@ -22,7 +22,7 @@
         <!-- Cards -->
         <div class="row justify-content-end">
             <div class="col-3 px-2 p-0 m-0 d-grid">
-                <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+                <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm" routerLink="/sistema/expedicao/cadastro/veiculo/cadastrar">
                   <h5 class="fw-normal my-auto text-truncate text-custom-dark">Adicionar veículo</h5>
                   <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
                 </button>
